# edda-network

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/edda-consensus/: Cargo.toml
crates/edda-consensus/src/: leader.rs  lib.rs  tower.rs  validator.rs  vote.rs
crates/edda-core/: Cargo.toml
crates/edda-core/src/: account.rs  block.rs  hash.rs  keypair.rs  lib.rs  transaction.rs
crates/edda-network/: Cargo.toml
crates/edda-network/src/: lib.rs
crates/edda-poh/: Cargo.toml
crates/edda-poh/src/: lib.rs
crates/edda-rpc/: Cargo.toml
crates/edda-rpc/src/: lib.rs
crates/edda-wasm/: Cargo.toml
crates/edda-wasm/src/: lib.rs
edda website/: index.html  login.html  presale.html  styles.css
examples/counter/: counter.wat
explorer/: next.config.js  package-lock.json  package.json
explorer/src/app/: globals.css  layout.tsx  page.tsx
explorer/src/lib/: rpc.ts
node/: Cargo.toml
node/src/: main.rs
scripts/: run-tests.ps1  start-all.ps1  start-explorer.ps1  start-node1.ps1  start-node2.ps1  start-node3.ps1  start-wallet.ps1
sdk/: package-lock.json  package.json
sdk/src/: bincode.ts  connection.ts  example.ts  index.ts  keypair.ts  publickey.ts  transaction.ts
wallet/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
wallet/src/app/: globals.css  layout.tsx  page.tsx
wallet/src/lib/: crypto.ts  rpc.ts
