[package]
name    = "edda-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
sha2          = { workspace = true }
ed25519-dalek = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
hex           = { workspace = true }
rand          = { workspace = true }
