[package]
name    = "edda-network"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
edda-core = { path = "../edda-core" }
libp2p = { version = "0.54", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "macros",
    "tokio",
] }
futures  = { workspace = true }
tokio    = { workspace = true }
anyhow   = { workspace = true }
bincode  = { workspace = true }
